# Splat-MOVER

./: .gitignore  README.md  pyproject.toml
graspnet/graspnetAPI/: =1.24.0
graspnet/graspnetAPI/graspnetAPI/: grasp.py  graspnet.py  graspnet_eval.py
graspnet/graspnetAPI/graspnetAPI/utils/: eval_utils.py  rotation.py  utils.py  vis.py
graspnet/graspnetAPI/graspnetAPI/utils/dexnet/grasping/meshpy/: sdf.py
graspnet/graspnet_baseline/knn/src/: knn.h
graspnet/graspnet_baseline/knn/src/cuda/: vision.h
graspnet/graspnet_baseline/models/: graspnet.py
graspnet/graspnet_baseline/utils/: loss_utils.py
sagesplat/: sagesplat.py  sagesplat_config.py  sagesplat_pipeline.py  viewer_utils.py
sagesplat/clip/: clip.py  model.py
sagesplat/data/: sagesplat_datamanager.py
sagesplat/data/utils/: affordance_dataloader.py  feature_dataloader.py  maskclip_dataloader.py  utils.py
sagesplat/encoders/: maskclip_encoder.py
sagesplat/vrb/: demo.py  inference.py
sagesplat/vrb/networks/: layer.py  model.py
scripts/: eval.py  eval_scene_editing.py
utils/: exporter.py  exporter_utils.py  grasp_utils.py  nerf_utils.py  render_utils.py  scene_editing_utils.py
